--- a/WordFinderWPF/WordFinderWPF.csproj
+++ b/WordFinderWPF/WordFinderWPF.csproj
@@ -7,10 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="dice.png" />
+    <None Remove="diceHand.png" />
+    <None Remove="dices.png" />
+    <None Remove="downArrow.png" />
     <None Remove="logo.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="dice.png" />
+    <Resource Include="diceHand.png" />
+    <Resource Include="dices.png" />
+    <Resource Include="downArrow.png" />
     <Resource Include="logo.png" />
   </ItemGroup>
 
